--- a/_posts/2014-05-13-ios_笔记.md
+++ b/_posts/2014-05-13-ios_笔记.md
@@ -5,7 +5,7 @@ description: iOS笔记
 tags: [iOS]
 ---
 ##动画
-CoreAnimation动画有一个 **初始状态** 和 **结束状态** ，动画结束后会(``animationDidStop``之前)``Layer``会回到 **初始状态** 。如果在``animationDidStop``中设置 **结束状态** 会闪烁，因为一刹那``Layer``回到了 **初始状态** 。因此应该在``addAnimation``之后要设置``Layer``的 **结束状态** 。
+``CoreAnimation`` 动画有一个 **初始状态** 和 **结束状态** ，动画结束后会(``animationDidStop``之前)``Layer``会回到 **初始状态** 。如果在``animationDidStop``中设置 **结束状态** 会闪烁，因为一刹那``Layer``回到了 **初始状态** 。因此应该在``addAnimation``之后要设置``Layer``的 **结束状态** 。
 
 ```objective-c
 
