--- a/_posts/2014-05-13-ios_笔记.md
+++ b/_posts/2014-05-13-ios_笔记.md
@@ -16,6 +16,9 @@ tags: [iOS]
 [self.ballButton5.layer addAnimation:[self ballButtonAnimate:5 angle:angle] forKey:nil];
 [self.ballButton6.layer addAnimation:[self ballButtonAnimate:6 angle:angle] forKey:nil];
 
+/**
+* 设置最终状态
+*/
 _angle = angle;
 [self layoutBallButtons];
     
