--- a/_posts/2014-05-13-ios_笔记.md
+++ b/_posts/2014-05-13-ios_笔记.md
@@ -23,3 +23,28 @@ _angle = angle;
 [self layoutBallButtons];
     
 ```
+###Swift
+- 函数参数
+
+```javascript
+func TestFun(fun:((String) -> (Bool,Int))) -> String {
+    fun("testFun->fun")
+    return "testFun"
+}
+
+TestFun({ k in
+    println(k)
+    return (false,0)
+})
+
+var fun:((String) -> (Bool,Int)) = { k in
+    println(k)
+    return (false,0)
+}
+
+func Fun(k:String) -> (Bool,Int) {
+    println(k)
+    return (false,0)
+}
+  
+```
