--- a/_posts/2014-05-13-ios_笔记.md
+++ b/_posts/2014-05-13-ios_笔记.md
@@ -27,11 +27,18 @@ _angle = angle;
 - 函数参数
 
 ```javascript
+
+/**
+* fun类型为((String) -> (Bool,Int))的函数
+*/
 func TestFun(fun:((String) -> (Bool,Int))) -> String {
     fun("testFun->fun")
     return "testFun"
 }
 
+/**
+* 闭包语法
+*/
 TestFun({ k in
     println(k)
     return (false,0)
@@ -42,9 +49,17 @@ var fun:((String) -> (Bool,Int)) = { k in
     return (false,0)
 }
 
+TestFun(fun)
+
+/**
+* 函数
+*/
 func Fun(k:String) -> (Bool,Int) {
     println(k)
     return (false,0)
 }
+
+fun = Fun
+TestFun(fun)
   
 ```
