--- a/_posts/2014-05-13-ios_笔记.md
+++ b/_posts/2014-05-13-ios_笔记.md
@@ -65,7 +65,5 @@ TestFun(fun)
 ```
 
 - `Objc`使用`Swift`代码
-
-	1.添加`Swift`代码，`Swift`类必须继承`NSObject`。
-	
-	2.在`Objc`代码中添加`#import "ProductModuleName-Swift.h"`,ProductModuleName为工程产品的名称，比如工程名称为SwiftDemo，则为`#import "SwiftDemo-Swift.h"`。
+	1. 添加`Swift`代码，`Swift`类必须继承`NSObject`。
+	2. 在`Objc`代码中添加`#import "ProductModuleName-Swift.h"`,`ProductModuleName`为工程产品的名称，比如工程名称为`SwiftDemo`，则为`#import "SwiftDemo-Swift.h"`。
