--- a/_posts/2014-05-13-ios_笔记.md
+++ b/_posts/2014-05-13-ios_笔记.md
@@ -67,3 +67,8 @@ TestFun(fun)
 - `Objc`使用`Swift`代码
 	1. 添加`Swift`代码，`Swift`类必须继承`NSObject`。
 	2. 在`Objc`代码中添加`#import "ProductModuleName-Swift.h"`,`ProductModuleName`为工程产品的名称，比如工程名称为`SwiftDemo`，则为`#import "SwiftDemo-Swift.h"`。
+	> 工程中`ProductModuleName-Swift.h`文件是`XCode`编译过程中自动生成的，内容为`Swift`类翻译过来的`Objc`代码。
+		
+
+- `Swift`使用`Objc`代码
+	1. 工程中新建`#import "ProductModuleName--Bridging-Header.h"`头文件，放入`Swift`代码可见的`Objc`头文件，`Swift`中可以直接使用`Objc`类。
