--- a/_posts/2014-05-13-ios_笔记.md
+++ b/_posts/2014-05-13-ios_笔记.md
@@ -72,3 +72,21 @@ TestFun(fun)
 
 - `Swift`使用`Objc`代码
 	1. 工程中新建`#import "ProductModuleName--Bridging-Header.h"`头文件，放入`Swift`代码可见的`Objc`头文件，`Swift`中可以直接使用`Objc`类。
+
+###ARC内存
+
+- 在类中添加`dealloc`函数检测内存泄漏
+  
+  ```objc
+  -(void)dealloc 
+  {
+  	NSLog(@"dealloc").
+  }
+  ```
+  
+- 访问类的成员变量尽量添加`self->`前缀
+
+	```objc
+		self->_name
+	```
+  
